--- a/index.html
+++ b/index.html
@@ -475,7 +475,8 @@
 
 
         <div class="carousel-testimoni">
-            <div class="title-testimonial">TESTIMONI MEMBER YANG BERHASIL PROFIT</div>
+            <center>
+                <div class="title-testimonial">TESTIMONI MEMBER YANG </br> BERHASIL PROFIT</div></center>
             <button class="carousel-btn prev">&#10094;</button>
 
             <div class="carousel-track">
