--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
 </head>
 
 <body>
-
-
-
-
         <div class="parallax">
             <section class="parallax__header">
                 <div class="parallax__visuals">
@@ -220,7 +216,7 @@
             </div>
 
             <div class="pricing">
-                <h2>Start Min</h2>
+                <h2>START MIN</h2>
                 <p>
                     <span class="discounted-price">$5.000</span>
                 </p>
