--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div class="bg-fixed"></div>
         <div class="parallax">
             <section class="parallax__header">
                 <div class="parallax__visuals">
