--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="parallax__black-line-overflow"></div>
                     <div data-parallax-layers class="parallax__layers">
                         <img src="img/forex.png" loading="lazy" width="800" data-parallax-layer="1"
-                            class="parallax__layer-img">
+                            class="parallax__layer-img" alt="bg-awal">
 
                         <div data-parallax-layer="3" class="parallax__layer-title">
                             <h2 class="parallax__title"><span class="parallax__title" data-period="2000"
@@ -30,7 +30,7 @@
                             </h2>
                         </div>
                         <img src="img/logo1.webp" loading="eager" fetchpriority="high" width="800"
-                            data-parallax-layer="4" class="parallax__layer-img-logo">
+                            data-parallax-layer="4" class="parallax__layer-img-logo" alt="logotr">
 
 
                     </div>
@@ -237,27 +237,27 @@
 
             <div class="grid-panduan">
                 <div class="card-panduan">
-                    <img src="img/SIGNAL AKURAT.jpg" alt="Tutorial Pemula">
+                    <img src="img/SIGNAL AKURAT.jpg" alt="panduan 1">
                     <p>Signal Akurat</p>
                 </div>
                 <div class="card-panduan">
-                    <img src="img/EDUKASI ANALISA TEKNIKAL.jpg" alt="Tutorial Advance">
+                    <img src="img/EDUKASI ANALISA TEKNIKAL.jpg" alt="panduan 2">
                     <p>Edukasi Analisa Teknikal</p>
                 </div>
                 <div class="card-panduan">
-                    <img src="img/MANAJEMEN RESIKO.jpg" alt="Analisa Eksklusif">
+                    <img src="img/MANAJEMEN RESIKO.jpg" alt="panduan 3">
                     <p>Manajemen Risiko & Modal</p>
                 </div>
                 <div class="card-panduan">
-                    <img src="img/PSIKOLOGI TRADING.jpg" alt="Psikologi Trading">
+                    <img src="img/PSIKOLOGI TRADING.jpg" alt="panduan 4">
                     <p>Psikologi & Mindset Trading</p>
                 </div>
                 <div class="card-panduan">
-                    <img src="img/TRKNIKAL DAN FUNDAMENTAL.jpg" alt="Manajemen Risiko">
+                    <img src="img/TRKNIKAL DAN FUNDAMENTAL.jpg" alt="panduan 5">
                     <p>Teknikal dan Fundamental</p>
                 </div>
                 <div class="card-panduan">
-                    <img src="img/TEKNIK TRADING.jpg" alt="Teknik Trading">
+                    <img src="img/TEKNIK TRADING.jpg" alt="panduan 6">
                     <p>Teknik Trading Simpel & Efektif</p>
                 </div>
 
@@ -376,7 +376,7 @@
                 <h1>PROGRAM UNGGULAN</h1>
 
             <div class="card-unggulan">
-                    <img src="img/mh.JPG">
+                    <img src="img/mh.JPG" alt="Program Unggulan">
             </div>
 
             <a class="button-unggulan" href="https://link.watzap.id/partner-trading-terbaik"
@@ -406,56 +406,56 @@
 
                     <a href="https://www.instagram.com/deni_dollar/?utm_source=ig_web_button_share_sheet"
                         target="_blank">
-                        <card data-image="img/deni.jpg">
+                        <card data-image="img/deni.jpg" alt="kontak 1">
                             <h1 slot="header">Deni Dollar</h1>
                             <p slot="content">Trader Profesional</p>
                         </card>
                     </a>
                     <a href="https://linktr.ee/fajarprawira_?utm_source=linktree_profile_share&ltsid=90492ded-0a56-47b2-8dd6-9252ccb1a3c9"
                         target="_blank">
-                        <card data-image="img/Fajar.JPG">
+                        <card data-image="img/Fajar.JPG" alt="kontak 2">
                             <h1 slot="header">Fajar Prawira</h1>
                             <p slot="content">Trader Profesional</p>
                         </card>
                     </a>
                     <a href="https://www.instagram.com/dnlyohansa?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                         target="_blank">
-                        <card data-image="img/yohan.jpg">
+                        <card data-image="img/yohan.jpg" alt="kointak 3">
                             <h1 slot="header">Daniel Yohansa</h1>
                             <p slot="content">Trader Profesional</p>
                         </card>
                     </a>
                     <a href="https://www.instagram.com/danipradikta?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                         target="_blank">
-                        <card data-image="img/dani.jpg">
+                        <card data-image="img/dani.jpg" alt="kontak 4">
                             <h1 slot="header">Dani Pradikta</h1>
                             <p slot="content">Trader Profesional</p>
                         </card>
                     </a>
                     <a href="https://www.instagram.com/ivanqo19?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                         target="_blank">
-                        <card data-image="img/ivan.jpg">
+                        <card data-image="img/ivan.jpg" alt="kontak 5">
                             <h1 slot="header">Ivanqo</h1>
                             <p slot="content">Trader Profesional</p>
                         </card>
                     </a>
                     <a href="https://www.instagram.com/aipsumpena26?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                         target="_blank">
-                        <card data-image="img/mraip.jpeg">
+                        <card data-image="img/mraip.jpeg" alt="kontak 6">
                             <h1 slot="header">Aip Sumpena</h1>
                             <p slot="content">Trader Profesional</p>
                         </card>
                     </a>
                     <a href="https://www.instagram.com/_milhamar_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                         target="_blank">
-                        <card data-image="img/ilham.JPG">
+                        <card data-image="img/ilham.JPG" alt="kontak 7">
                             <h1 slot="header">Ilham Dirham</h1>
                             <p slot="content">Trader Profesional</p>
                         </card>
                     </a>
                     <a href="https://www.instagram.com/ilyas.yayat?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                         target="_blank">
-                        <card data-image="img/Y.JPG">
+                        <card data-image="img/Y.JPG" alt="kontak 8">
                             <h1 slot="header">Ilyas</h1>
                             <p slot="content">Trader Profesional</p>
                         </card>
